# esp32-sink-iot

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.cpp
main/include/: defines.h  module_display.h  module_gpio.h  module_mqtt.h  module_ota.h  module_pulse_counter.h  module_pwm.h  module_sntp.h  module_timer.h  module_webserver.h  module_wifi_provisioning.h
main/src/: defines.cpp  module_display.cpp  module_gpio.cpp  module_mqtt.cpp  module_ota.cpp  module_pulse_counter.cpp  module_pwm.cpp  module_sntp.cpp  module_timer.cpp  module_webserver.cpp  module_wifi_provisioning.cpp
main/web/: app.css  app.js  index.html
scripts/: prepare.sh  run_webtest.sh
test/: package-lock.json  package.json  server.js
